# barebone-api

./: CMakeLists.txt  README.md  config.json  start.sh
src/: main.cpp
